...
                                            <constraint firstAttribute="height" constant="100" id="Xmu-Gy-5rg"/>
                                        </constraints>
                                        <state key="normal" title="Measure"/>
                                        <connections>
                                            <segue destination="Ken-eg-4N4" kind="show" id="6YN-XR-auF"/>
...
                                            <constraint firstAttribute="height" constant="100" id="gq0-SG-qby"/>
                                        </constraints>
                                        <state key="normal" title="Exercise"/>
                                        <connections>
                                            <segue destination="D1k-0f-wmF" kind="show" id="GiE-xf-84w"/>
...
                                            <constraint firstAttribute="height" constant="100" id="aqZ-ey-wwu"/>
                                        </constraints>
                                        <state key="normal" title="Medication"/>
                                        <connections>
                                            <segue destination="8l9-YL-xlN" kind="show" id="ts2-cP-Yrc"/>
...
                                            <constraint firstAttribute="height" constant="100" id="Kl9-os-wap"/>
                                        </constraints>
                                        <state key="normal" title="View Results"/>
                                        <connections>
                                            <segue destination="Bkq-on-jAH" kind="show" id="Ymv-hm-zKY"/>
...
                                <rect key="frame" x="107" y="588" width="146" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Edit/Add Medications"/>
                                <connections>
                                    <segue destination="9BJ-KS-svN" kind="show" id="RKb-Tg-cIK"/>
...
                                <rect key="frame" x="133" y="582" width="108" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Add Medication"/>
                                <connections>
                                    <segue destination="r9p-S9-g0s" kind="show" id="uTn-t1-C9u"/>
...
                                <rect key="frame" x="9" y="20" width="48" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Cancel"/>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H9r-3r-VeI">
...
