...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="beg-2k-vfW">
                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="3h7-AM-738"/>
                                                    <constraint firstAttribute="height" constant="50" id="TK2-CS-lV1"/>
                                                </constraints>
                                                <state key="normal" title="L-Arrow" image="Left-Arrow"/>
                                                <connections>
                                                    <action selector="leftArrowButton:" destination="068-er-gBn" eventType="touchUpInside" id="VRQ-kE-p7n"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="100" verticalHuggingPriority="251" text="Today" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUa-XP-9hC">
                                                <rect key="frame" x="58" y="0.0" width="219" height="50"/>
...
                                                <rect key="frame" x="285" y="0.0" width="50" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="4oy-wz-WlM"/>
                                                    <constraint firstAttribute="height" constant="50" id="upS-jW-CMH"/>
                                                </constraints>
                                                <color key="tintColor" red="0.098039215690000001" green="0.50196078430000002" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="R-Arrow" image="Right-Arrow"/>
                                                <connections>
                                                    <action selector="rightArrowButton:" destination="068-er-gBn" eventType="touchUpInside" id="xXF-Nr-u1a"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D55-Wr-XQT">
                                        <rect key="frame" x="0.0" y="557" width="335" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="6V6-sv-58c"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Edit/Add Exercises">
                                            <color key="titleColor" red="0.098039215686274508" green="0.90196078431372551" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="B5Z-iz-Yt3" kind="show" identifier="addExercise" id="KZE-4j-HvZ"/>
                                        </connections>
                                    </button>
...
            <objects>
                <viewController id="lAD-By-a8h" customClass="ExerciseViewController" customModule="tremr" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="utS-JN-9UA">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter units performed" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OYK-P6-JG0">
                                <rect key="frame" x="32" y="151" width="318" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter exercise name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5wK-g8-ema">
                                <rect key="frame" x="30" y="85" width="317" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ooa-b2-AIC">
                                <rect key="frame" x="131" y="575" width="113" height="36"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Add Exercise">
                                    <color key="titleColor" red="0.098039215686274508" green="0.90196078431372551" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="addExerciseButton:" destination="lAD-By-a8h" eventType="touchUpInside" id="EHf-De-e03"/>
                                </connections>
                            </button>
...
