...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxL-W0-CFv">
                                        <rect key="frame" x="0.0" y="507" width="335" height="100"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="PpI-y0-xa0"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="NEXT">
                                            <color key="titleColor" red="0.098039215690000001" green="0.90196078430000004" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="ipY-07-urm" kind="show" id="mad-Gk-fhG"/>
                                        </connections>
                                    </button>
...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ce3-r5-QzS">
                                <rect key="frame" x="20" y="40" width="335" height="607"/>
                                <subviews>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vj3-AK-9tD">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="159.5"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <string key="text">For this measurement, you should stand up straight and hold the phone straight out in front of you as shown in the picture below.  When you are ready, press the "Start Recording" button. There will then be a 5 second timer for you to get the phone into position.</string>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="100" image="20181101_180539" translatesAutoresizingMaskIntoConstraints="NO" id="Bah-NK-QoJ">
                                        <rect key="frame" x="0.0" y="167.5" width="335" height="331.5"/>
                                    </imageView>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nmy-M7-B0a">
                                        <rect key="frame" x="0.0" y="507" width="335" height="100"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="prN-tt-Khr"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Done">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="Hxf-rW-vGC" kind="show" id="5AM-81-4t7"/>
                                        </connections>
                                    </button>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNb-C1-sRz">
                                <rect key="frame" x="60" y="275" width="69" height="87"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                <state key="normal" title="Yes">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="EwS-5N-Z2f" kind="show" id="iF1-qk-P88"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ngd-BH-VYg">
                                <rect key="frame" x="258" y="283" width="57" height="71"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                <state key="normal" title="No">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="Hxf-rW-vGC" kind="show" id="sMj-N7-Wom"/>
                                </connections>
                            </button>
...
