...
                            <segmentedControl contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="1Rt-lM-Akb">
                                <rect key="frame" x="15" y="592" width="345" height="51"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Aiw-Ug-vSY"/>
                                </constraints>
                                <segments>
                                    <segment title="Week"/>
                                    <segment title="Month"/>
                                    <segment title="Year"/>
                                </segments>
                                <color key="tintColor" red="0.0" green="0.63529411764705879" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
                                    <action selector="indexChanged:" destination="XVr-e5-TTc" eventType="valueChanged" id="vG6-G0-BzE"/>
                                </connections>
                            </segmentedControl>
...
